--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ResponseDtos\" />
+    <Folder Include="ResponseDTOs\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
