--- a/BusinessServiceTests/BusinessServiceTests.csproj
+++ b/BusinessServiceTests/BusinessServiceTests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LocationBusinessService\BusinessServices.csproj" />
+    <ProjectReference Include="..\BusinessServices\BusinessServices.csproj" />
   </ItemGroup>
 
   <ItemGroup>
