--- a/ExampleService.Api/ExampleService.Api.csproj
+++ b/ExampleService.Api/ExampleService.Api.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ExampleService.Domain\ExampleService.Domain.csproj" />
+    <ProjectReference Include="..\ExampleService.Infrastructure\ExampleService.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
